--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Tin Hin Store</title>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Bootstrap Core  CSS small -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
