--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <hr>
                 <p>Retail European Cosmetics for Vietnam</p>
                 <p></p>
-                <p>Check our Instagram & Facebook accounts to access our complete product list</p>
+                <p>Check our Instagram & Facebook! accounts to access our complete product list</p>
                    <p>
                     <ul class="socialbutton">
                          <li>
