--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Chúc chị em Tin Hin có một buổi sáng tốt lành!
+                                    Sạn tắm mùi dâu The Body Shop 
                                 </div>
                                 <div class="project-name">
                                     Body Polish
